2008-07-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_wizard.py:
	  Mark test as skip instead.

2008-07-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/message.py:
	  Override previous messages with the same id.
	* flumotion/worker/checks/check.py:
	* flumotion/worker/checks/gst010.py:
	  Make sure the message id is passed on so it can be overridden.
	  Fixes #1061.

2008-07-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_wizard.py:
	* flumotion/ui/wizard.py:
	  Fix Johan's build breakage.

2008-07-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/message.py:
	  Fix typo.  Fixes #1077.

2008-07-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/styleguide:
	* flumotion/component/base/eatersnode.py:
	* flumotion/component/base/feedersnode.py:
	* flumotion/component/eater.py:
	* flumotion/component/feeder.py:
	* flumotion/test/test_component_feeder.py:
	  Fix uiState key naming to be lowercase-hyphenated.
	  feeder uiState:
	  - clientId                  -> client-id
	  - bytesReadCurrent          -> bytes-read-current
	  - bytesReadTotal            -> bytes-read-total
	  - lastConnect               -> last-connect
	  - lastDisconnect            -> last-disconnect
	  - lastActivity              -> last-activity
	  - buffersDroppedCurrent     -> buffers-dropped-current
	  - buffersDroppedTotal       -> buffers-dropped-total
	  eater uiState:
	  - eaterAlias                -> eater-alias
	  - eaterName                 -> eater-name
	  - lastConnect               -> last-connect
	  - lastDisconnect            -> last-disconnect
	  - totalConnections          -> total-connections
	  - countTimestampDiscont     -> count-timestamp-discont
	  - countOffsetDiscont        -> count-offset-discont
	  - totalTimestampDiscont     -> total-timestamp-discont
	  - totalOffsetDiscont        -> total-offset-discont